Fixed a bug that did not allow to wrap the pre and code tags

--- a/Responsive-Web-Design/Applied-Responsive-Web-Design-Projects/05-Build-a-Technical-Documentation-Page/css/style.css
+++ b/Responsive-Web-Design/Applied-Responsive-Web-Design-Projects/05-Build-a-Technical-Documentation-Page/css/style.css
@@ -82,26 +82,7 @@ li a {
   text-decoration: none;
 }
 @media (max-width: 800px) {
-  /* div {
-    flex-flow: row wrap;
-  }
-  .header-nav {
-    width: 100%;
-    margin-right: 0;
-    border-right: none;
-    height: 500px;
-} */
   #navbar li {
     width: 300px;
   }
-  /* #navbar {
-    position: fixed;
-  }
-  #main-doc {
-    padding-left: 10px;
-    width: 100%;
-    margin-left: 10px;
-    margin-top: 500px;
-    border-left: 0;
-  } */ */
 }
